@@ -1,7 +1,7 @@
 local E, L, V, P, G = unpack(ElvUI); --Import: Engine, Locales, PrivateDB, ProfileDB, GlobalDB, Localize Underscore
 local TT = E:GetModule('Tooltip')
 
-local tiers = { "NH", "ToV","ToS", "ABT"}
+local tiers = { "ToV", "NH", "ToS", "ABT"}
 local levels = { 
 	"Mythic", 
 	"Heroic", 
@@ -10,20 +10,6 @@ local levels = {
 }
 
 local bosses = {
-	{ -- Nighthold
-		{ --Mythic
-			10943, 10947, 10951, 10955, 10960, 10964, 10968, 10972, 10976, 10980,
-		},
-		{ -- Herioc
-			10942, 10946, 10950, 10954, 10959, 10963, 10967, 10971, 10975, 10979,
-		},
-		{ -- Normal
-			10941, 10945, 10949, 10953, 10957, 10962, 10966, 10970, 10974, 10978,
-		},
-		{ -- LFR
-			10940, 10944, 10948, 10952, 10956, 10961, 10965, 10969, 10973, 10977,
-		},
-	},
 	{ -- Trial of Valor
 		{ --Mythic
 			11410, 11414, 11418,
@@ -36,6 +22,20 @@ local bosses = {
 		},
 		{ -- LFR
 			11407, 11411, 11415,
+		},
+	},
+	{ -- Nighthold
+		{ --Mythic
+			10943, 10947, 10951, 10955, 10960, 10964, 10968, 10972, 10976, 10980,
+		},
+		{ -- Herioc
+			10942, 10946, 10950, 10954, 10959, 10963, 10967, 10971, 10975, 10979,
+		},
+		{ -- Normal
+			10941, 10945, 10949, 10953, 10957, 10962, 10966, 10970, 10974, 10978,
+		},
+		{ -- LFR
+			10940, 10944, 10948, 10952, 10956, 10961, 10965, 10969, 10973, 10977,
 		},
 	},
 	{ -- Tomb of Sargeras
